Convert social icons to linked images

--- a/index.html
+++ b/index.html
@@ -295,10 +295,10 @@
             </div>
 
             <div class="footer-social-icons">
-                <img src="assets/icon-linkedin.png" alt="LinkedIn">
-                <img src="assets/icon-twitter.png" alt="Twitter">
-                <img src="assets/icon-facebook.png" alt="Facebook">
-                <img src="assets/icon-youtube.png" alt="YouTube">
+                <a href="https://www.linkedin.com"><img src="assets/icon-linkedin.png" alt="LinkedIn"></a>
+                <a href="https://twitter.com"><img src="assets/icon-twitter.png" alt="Twitter"></a>
+                <a href="https://www.facebook.com"><img src="assets/icon-facebook.png" alt="Facebook"></a>
+                <a href="https://www.youtube.com"><img src="assets/icon-youtube.png" alt="YouTube"></a>
             </div>
 
         </div>
